test/sema/exercise/assignment_rhs_error.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn main() {
  let x;
  x = y;
  // CHECK: [[# @LINE - 1 ]]:7: error: symbol 'y' not found
}
